--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.botpress.cloud/webchat/v2/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/f9f69d3c-f971-47ae-bd11-002799b1c586/webchat/v2/config.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
